--- a/AlbergueAnimal/Views/Animals/Details.cshtml
+++ b/AlbergueAnimal/Views/Animals/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model AlbergueAnimal.Models.Animal
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhe do Animal";
 }
 
-<h2>Details</h2>
+<h2>Detalhe do Animal</h2>
 
 <div>
     <h4>Animal</h4>
@@ -61,7 +61,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.AnimalId">Edit</a> |
-    <a asp-action="Index">Back to List</a> 
+    <a asp-action="Edit" asp-route-id="@Model.AnimalId">Editar</a> |
+    <a asp-action="Index">Voltar á lista</a> 
     
 </div>
