--- a/AlbergueAnimal/Views/Animals/Edit.cshtml
+++ b/AlbergueAnimal/Views/Animals/Edit.cshtml
@@ -1,9 +1,9 @@
 ﻿@model AlbergueAnimal.Models.Animal
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 <h4>Animal</h4>
 <hr />
@@ -60,7 +60,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar á Lista</a>
 </div>
 
 @section Scripts {
