--- a/AlbergueAnimal/Views/Animals/Create.cshtml
+++ b/AlbergueAnimal/Views/Animals/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AlbergueAnimal.Models.Animal
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar Animal";
 }
 
 <h2>Create</h2>
@@ -59,7 +59,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar á Lista</a>
 </div>
 
 @section Scripts {
