--- a/AlbergueAnimal/Views/Animals/Delete.cshtml
+++ b/AlbergueAnimal/Views/Animals/Delete.cshtml
@@ -2,12 +2,12 @@
 
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Remover";
 }
 
-<h2>Delete</h2>
+<h2>Remover</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem a certeza que quer remover o animal?</h3>
 <div>
     <h4>Animal</h4>
     <hr />
@@ -65,6 +65,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="AnimalId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Voltar á Lista</a>
     </form>
 </div>
