traduções nas views do animal

--- a/AlbergueAnimal/Views/Animals/Details.cshtml
+++ b/AlbergueAnimal/Views/Animals/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model AlbergueAnimal.Models.Animal
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhe";
 }
 
-<h2>Details</h2>
+<h2>Detalhe</h2>
 
 <div>
     <h4>Animal</h4>
