--- a/AlbergueAnimal/Views/Raca/Create.cshtml
+++ b/AlbergueAnimal/Views/Raca/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model AlbergueAnimal.Models.Raca
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Inserir Raça";
 }
 
-<h2>Create</h2>
+<h2>Inserir Raça</h2>
 
 <h4>Raca</h4>
 <hr />
@@ -25,7 +25,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar á Lista</a>
 </div>
 
 @section Scripts {
