--- a/AlbergueAnimal/Views/Raca/Delete.cshtml
+++ b/AlbergueAnimal/Views/Raca/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model AlbergueAnimal.Models.Raca
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Remover";
 }
 
-<h2>Delete</h2>
+<h2>Remover</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem a certeza de que quer remover esta raça?</h3>
 <div>
     <h4>Raca</h4>
     <hr />
@@ -22,6 +22,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="RacaId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Voltar á Lista</a>
     </form>
 </div>
