Limitação do acesso aos utilizadores nas opções de crud dos animais

--- a/AlbergueAnimal/Views/Animals/Details.cshtml
+++ b/AlbergueAnimal/Views/Animals/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model AlbergueAnimal.Models.Animal
 
 @{
-    ViewData["Title"] = "Detalhe do Animal";
+    ViewData["Title"] = "Details";
 }
 
-<h2>Detalhe do Animal</h2>
+<h2>Details</h2>
 
 <div>
     <h4>Animal</h4>
