--- a/AlbergueAnimal/Views/Animals/Delete.cshtml
+++ b/AlbergueAnimal/Views/Animals/Delete.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Remover</h2>
 
-<h3>Tem a certeza que quer remover o animal?</h3>
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Animal</h4>
     <hr />
