traduções nas páginas dos animais

--- a/AlbergueAnimal/Views/Animals/Details.cshtml
+++ b/AlbergueAnimal/Views/Animals/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model AlbergueAnimal.Models.Animal
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
     <h4>Animal</h4>
@@ -62,6 +62,6 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.AnimalId">Editar</a> |
-    <a asp-action="Index">Voltar á lista</a> 
+    <a asp-action="Index">Voltar á Lista</a> 
     
 </div>
