--- a/AlbergueAnimal/Views/Raca/Delete.cshtml
+++ b/AlbergueAnimal/Views/Raca/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Remover</h2>
 
-<h3>Tem a certeza de que quer remover esta raça?</h3>
+<h3>Tem a certeza que quer remover esta raça?</h3>
 <div>
     <h4>Raca</h4>
     <hr />
