--- a/AlbergueAnimal/Views/Raca/Edit.cshtml
+++ b/AlbergueAnimal/Views/Raca/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model AlbergueAnimal.Models.Raca
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
-<h4>Raca</h4>
+<h4>Raça</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -26,7 +26,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar á Lista</a>
 </div>
 
 @section Scripts {
