--- a/AlbergueAnimal/Views/Raca/Index.cshtml
+++ b/AlbergueAnimal/Views/Raca/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<AlbergueAnimal.Models.Raca>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Raças";
 }
 
-<h2>Index</h2>
+<h2>Raças</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Inserir Raça</a>
 </p>
 <table class="table">
     <thead>
@@ -24,12 +24,20 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Designacao)
             </td>
-            <td>
-                
-                <a asp-action="Edit" asp-route-id="@item.RacaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.RacaId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.RacaId">Delete</a>
-            </td>
+            @if (User.IsInRole("Administrator"))
+            {
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.RacaId">Editar</a> |
+                    <a asp-action="Details" asp-route-id="@item.RacaId">Detalhes</a> |
+                    <a asp-action="Delete" asp-route-id="@item.RacaId">Remover</a>
+                </td>
+            }
+            else
+            {
+                <td>
+                    <a asp-action="Details" asp-route-id="@item.RacaId">Detalhes</a>
+                </td>
+            }
         </tr>
 }
     </tbody>
