Página dos contactos alterada

--- a/AlbergueAnimal/Views/Home/About.cshtml
+++ b/AlbergueAnimal/Views/Home/About.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "Adote um amigo!";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>
+    A Quinta do Mião  está aberta ao público e pode ser visitada de 2ª a 6ª feira, das 14h00 às 17h00, na zona Industrial da Quinta das Rebelas, Santo André. Pode, também, ligar para o telefone: 21 206 86 25.
+    Eles esperam por si!
+</p>
