--- a/AlbergueAnimal/Views/Home/Contact.cshtml
+++ b/AlbergueAnimal/Views/Home/Contact.cshtml
@@ -1,17 +1,25 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Contactos";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<h4>Os nossos contactos:</h4>
+<br />
 
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<strong>Localização:</strong>
+<br />
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3075.9995258072295!2d-9.05270298468658!3d38.63554017961181!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd194829940eee21%3A0xe99296e7d2bb9e3b!2sQuinta+do+Mi%C3%A3o!5e1!3m2!1spt-BR!2spt!4v1543595294823" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+<br /><br />
+<strong>Horários:</strong> 
+<br />2ª a 6ªFeira, 14h00-16h30
+<br />Sábado, 11h00-13h00
+<br />Domingo, <b style="color:#d93025">Encerrado</b>
+
+<br /><br />
+<strong>Facebook:</strong> <a href="https://www.facebook.com/quintamiao/">Facebook</a>
+
+<br /><br />
+<strong>Telefone:</strong> 21 206 8625
+
