Menu do layout alterado

--- a/AlbergueAnimal/Views/Home/Contact.cshtml
+++ b/AlbergueAnimal/Views/Home/Contact.cshtml
@@ -18,7 +18,11 @@
 <br />Domingo, <b style="color:#d93025">Encerrado</b>
 
 <br /><br />
-<strong>Facebook:</strong> <a href="https://www.facebook.com/quintamiao/">Facebook</a>
+<strong>Facebook:</strong> <!--<a href="https://www.facebook.com/quintamiao/">Facebook</a>-->
+
+<a href="https://www.facebook.com/quintamiao/">
+    <img border="0" alt="Facebook" src="~/images/facebook.png" width="50" height="50">
+</a>
 
 <br /><br />
 <strong>Telefone:</strong> 21 206 8625
