--- a/AlbergueAnimal/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/AlbergueAnimal/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -1,17 +1,17 @@
 ﻿@page
 @model ExternalLoginModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Registar";
 }
 
 <h2>@ViewData["Title"]</h2>
-<h4>Associate your @Model.LoginProvider account.</h4>
+<h4>Associar a sua conta @Model.LoginProvider.</h4>
 <hr />
 
 <p class="text-info">
-    You've successfully authenticated with <strong>@Model.LoginProvider</strong>.
-    Please enter an email address for this site below and click the Register button to finish
-    logging in.
+    Autenticou-se com sucesso com <strong>@Model.LoginProvider</strong>.
+    Por favor insira um email de Autenticação para este site.
+    Carregue no butão Registo para para realizar logging in.
 </p>
 
 <div class="row">
@@ -23,7 +23,7 @@
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Register</button>
+            <button type="submit" class="btn btn-default">Registar</button>
         </form>
     </div>
 </div>
