--- a/AlbergueAnimal/Areas/Identity/Pages/Account/Login.cshtml
+++ b/AlbergueAnimal/Areas/Identity/Pages/Account/Login.cshtml
@@ -73,7 +73,7 @@
             </form>
         </section>
     </div>
-    <!--<div class="col-md-6 col-md-offset-2">
+    <div class="col-md-6 col-md-offset-2">
         <section>
             <h4>Usar outro serviço para entrar.</h4>
             <hr />
@@ -82,8 +82,7 @@
                 {
                     <div>
                         <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
+                            Não existiem serviços de autenticação externa configurados.
                         </p>
                     </div>
                 }
@@ -94,7 +93,7 @@
                             <p>
                                 @foreach (var provider in Model.ExternalLogins)
                                 {
-                                    <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                    <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in com a sua conta @provider.DisplayName ">@provider.DisplayName</button>
                                 }
                             </p>
                         </div>
@@ -102,7 +101,7 @@
                 }
             }
         </section>
-    </div>-->
+    </div>
 </div>
 
 @section Scripts {
