--- a/AlbergueAnimal/Views/Animals/Index.cshtml
+++ b/AlbergueAnimal/Views/Animals/Index.cshtml
@@ -8,15 +8,12 @@
 
 @if (User.IsInRole("Administrator"))
 {
-    <p>
-        <a asp-action="Create">Inserir Animal</a>
-        @* string linkText, string actionName, string controllerName*@
-    </p>
+<p>
+    <a asp-action="Create">Inserir Animal</a> | <a asp-action="IndexArquivo">Arquivo</a> | @Html.ActionLink("Imprimir", "AnimaisPDF", "Animals")
+    @* string linkText, string actionName, string controllerName*@
+</p>
 }
 
-<p>
-    @Html.ActionLink("Imprimir", "AnimaisPDF", "Animals")
-</p>
 <table class="table">
     <thead>
         <tr>
