--- a/AlbergueAnimal/Views/Animals/Details.cshtml
+++ b/AlbergueAnimal/Views/Animals/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Detalhes";
 }
 
-<h2>Detalhes</h2>
+<br/>
+<h2>@Html.DisplayNameFor(model => model.Nome)</h2>
 
 <div>
-    <h4>Animal</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
