--- a/AlbergueAnimal/Views/Animals/Edit.cshtml
+++ b/AlbergueAnimal/Views/Animals/Edit.cshtml
@@ -23,9 +23,12 @@
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Genero" class="control-label"></label>
-                <input asp-for="Genero" class="form-control" />
-                <span asp-validation-for="Genero" class="text-danger"></span>
+                <!--<label asp-for="Genero" class="control-label"></label>
+                     <input asp-for="Genero" class="form-control" />
+                     <span asp-validation-for="Genero" class="text-danger"></span>-->
+                <label asp-for="Genero"></label><br />
+                <input type="radio" asp-for="Genero" value="Macho" checked>Macho<br>
+                <input type="radio" asp-for="Genero" value="Fêmea">Fêmea<br>
             </div>
             <div class="form-group">
                 <label asp-for="Cor" class="control-label"></label>
