--- a/AlbergueAnimal/Views/Animals/Create.cshtml
+++ b/AlbergueAnimal/Views/Animals/Create.cshtml
@@ -30,8 +30,16 @@
                 <input type="radio" asp-for="Genero" value="Fêmea">Fêmea<br>
             </div>
             <div class="form-group">
-                <label asp-for="Cor" class="control-label"></label>
-                <input asp-for="Cor" class="form-control" />
+                <label asp-for="Cor" class="control-label"></label><br />
+                <!--<input asp-for="Cor" class="form-control" />-->
+                <select asp-for="Cor" class ="form-control">
+                    <option>Preto</option>
+                    <option>Branco</option>
+                    <option>Castanho</option>
+                    <option>Cinzento</option>
+                    <option>Amarelo</option>
+                    <option>Laranja</option>
+                </select>
                 <span asp-validation-for="Cor" class="text-danger"></span>
             </div>
             <div class="form-group">
