--- a/AlbergueAnimal/Views/Animals/Index.cshtml
+++ b/AlbergueAnimal/Views/Animals/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<AlbergueAnimal.Models.Animal>
 
+<br />
 @{
     ViewData["Title"] = "Animais";
 }
@@ -8,11 +9,12 @@
 
 @if (User.IsInRole("Administrator"))
 {
-<p>
-    <a asp-action="Create">Inserir Animal</a> | <a asp-action="IndexArquivo">Arquivo</a> | @Html.ActionLink("Imprimir", "AnimaisPDF", "Animals")
-    @* string linkText, string actionName, string controllerName*@
-</p>
+    <p>
+        <a asp-action="Create">Inserir Animal</a> | <a asp-action="IndexArquivo">Arquivo</a> | @Html.ActionLink("Imprimir", "AnimaisPDF", "Animals")
+        @* string linkText, string actionName, string controllerName*@
+    </p>
 }
+
 
 <table class="table">
     <thead>
@@ -92,7 +94,18 @@
 </table>
 
 <br />
-<h4>Filtrar Animais:</h4>
+
+@using (Html.BeginForm())
+{
+<p>
+    Procurar: @Html.TextBox("SearchString")
+    <!--<input type="submit" value="Procurar" />-->
+    <button type="submit" class="btn btn-default">Procurar</button>
+
+</p>
+}
+
+<!--<h4>Filtrar Animais:</h4>
 
 <br />
 
@@ -130,4 +143,4 @@
             </p>
         </form>
     </div>
-</div>
+</div>-->
