--- a/AlbergueAnimal/Views/Animals/Create.cshtml
+++ b/AlbergueAnimal/Views/Animals/Create.cshtml
@@ -10,11 +10,11 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="RacaId" class="control-label"></label>
-                <select asp-for="RacaId" class ="form-control" asp-items="ViewBag.RacaId"></select>
+                <select asp-for="RacaId" class="form-control" asp-items="ViewBag.RacaId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
@@ -23,8 +23,8 @@
             </div>
             <div class="form-group">
                 <!--<label asp-for="Genero" class="control-label"></label>
-                <input asp-for="Genero" class="form-control" />
-                <span asp-validation-for="Genero" class="text-danger"></span>-->
+        <input asp-for="Genero" class="form-control" />
+        <span asp-validation-for="Genero" class="text-danger"></span>-->
                 <label asp-for="Genero"></label><br />
                 <input type="radio" asp-for="Genero" value="Macho" checked>Macho<br>
                 <input type="radio" asp-for="Genero" value="Fêmea">Fêmea<br>
@@ -32,7 +32,7 @@
             <div class="form-group">
                 <label asp-for="Cor" class="control-label"></label><br />
                 <!--<input asp-for="Cor" class="form-control" />-->
-                <select asp-for="Cor" class ="form-control">
+                <select asp-for="Cor" class="form-control">
                     <option>Preto</option>
                     <option>Branco</option>
                     <option>Castanho</option>
@@ -58,9 +58,8 @@
                 <span asp-validation-for="DataVacina" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FicheiroFoto" class="control-label"></label>
-                <input asp-for="FicheiroFoto" class="form-control" />
-                <span asp-validation-for="FicheiroFoto" class="text-danger"></span>
+                <label class="control-label">Fotografia</label>
+                <input type="file" class="form-control" name="ThePicture" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
