--- a/AlbergueAnimal/Views/Animals/Edit.cshtml
+++ b/AlbergueAnimal/Views/Animals/Edit.cshtml
@@ -11,6 +11,16 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div>
+                @{
+                    if (Model.imageContent != null && Model.imageMimeType.Contains("image"))
+                    {
+                        string imageBase64 = Convert.ToBase64String(Model.imageContent);
+                        string imageSrc = string.Format("data:" + Model.imageMimeType + ";base64,{0}", imageBase64);
+                        <img src="@imageSrc" alt="Profile picture of @Model.Nome" style="max-height:500px; max-width:600px" class="img-responsive img-rounded" />
+                    }
+                }
+            </div>
             <input type="hidden" asp-for="AnimalId" />
             <div class="form-group">
                 <label asp-for="RacaId" class="control-label"></label>
@@ -24,8 +34,8 @@
             </div>
             <div class="form-group">
                 <!--<label asp-for="Genero" class="control-label"></label>
-                     <input asp-for="Genero" class="form-control" />
-                     <span asp-validation-for="Genero" class="text-danger"></span>-->
+             <input asp-for="Genero" class="form-control" />
+             <span asp-validation-for="Genero" class="text-danger"></span>-->
                 <label asp-for="Genero"></label><br />
                 <input type="radio" asp-for="Genero" value="Macho" checked>Macho<br>
                 <input type="radio" asp-for="Genero" value="Fêmea">Fêmea<br>
@@ -50,7 +60,7 @@
                 <input asp-for="DataVacina" class="form-control" />
                 <span asp-validation-for="DataVacina" class="text-danger"></span>
             </div>
-          
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
