--- a/AlbergueAnimal/Views/Animals/Index.cshtml
+++ b/AlbergueAnimal/Views/Animals/Index.cshtml
@@ -20,6 +20,9 @@
     <thead>
         <tr>
             <th>
+                Fotografia
+            </th>
+            <th>
                 @Html.ActionLink("Nome", "Index", new { sortOrder = ViewBag.NameSortParm })
             </th>
             <th>
@@ -37,7 +40,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.DataVacina)
             </th>
-           
+
             <th>
                 @Html.DisplayNameFor(model => model.Raca)
             </th>
@@ -47,44 +50,54 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Genero)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Cor)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataNascimento)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataEntrada)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataVacina)
-                </td>
-              
-                <td>
-                    @Html.DisplayFor(modelItem => item.Raca.Designacao)
-                </td>
-                @if (User.IsInRole("Administrator"))
-                {
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@item.AnimalId">Editar</a> |
-                        <a asp-action="Details" asp-route-id="@item.AnimalId">Detalhes</a> |
-                        <a asp-action="Delete" asp-route-id="@item.AnimalId">Remover</a>
-                    </td>
+        <tr>
+            <td>
+                @{
+                    if (item.imageContent != null && item.imageMimeType.Contains("image"))
+                    {
+                        string imageBase64 = Convert.ToBase64String(item.imageContent);
+                        string imageSrc = string.Format("data:" + item.imageMimeType + ";base64,{0}", imageBase64);
+                        <img src="@imageSrc" alt="Profile picture of @item.Nome" style=" width: 50px;height: 50px; border-radius: 50%; padding: 0;width: 50px;height: 50px; line-height: 50px;" class="img-responsive img-rounded" />
+                    }
                 }
-                else
-                {
-                    <td>
-                        <a asp-action="Details" asp-route-id="@item.AnimalId">Detalhes</a>
-                    </td>
-                }
-            </tr>
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nome)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Genero)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cor)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DataNascimento)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DataEntrada)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DataVacina)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.Raca.Designacao)
+            </td>
+            @if (User.IsInRole("Administrator"))
+            {
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.AnimalId">Editar</a> |
+                    <a asp-action="Details" asp-route-id="@item.AnimalId">Detalhes</a> |
+                    <a asp-action="Delete" asp-route-id="@item.AnimalId">Remover</a>
+                </td>
+            }
+            else
+            {
+                <td>
+                    <a asp-action="Details" asp-route-id="@item.AnimalId">Detalhes</a>
+                </td>
+            }
+        </tr>
         }
     </tbody>
 </table>
