--- a/AlbergueAnimal/Views/Animals/Create.cshtml
+++ b/AlbergueAnimal/Views/Animals/Create.cshtml
@@ -23,8 +23,8 @@
             </div>
             <div class="form-group">
                 <!--<label asp-for="Genero" class="control-label"></label>
-        <input asp-for="Genero" class="form-control" />
-        <span asp-validation-for="Genero" class="text-danger"></span>-->
+                <input asp-for="Genero" class="form-control" />
+                <span asp-validation-for="Genero" class="text-danger"></span>-->
                 <label asp-for="Genero"></label><br />
                 <input type="radio" asp-for="Genero" value="Macho" checked>Macho<br>
                 <input type="radio" asp-for="Genero" value="Fêmea">Fêmea<br>
@@ -71,6 +71,13 @@
 <div>
     <a asp-action="Index">Voltar á Lista</a>
 </div>
+
+@if (!string.IsNullOrEmpty(ViewBag.Message))
+{
+    <script type="text/javascript">
+        alert("@ViewBag.Message");
+    </script>
+}
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
