--- a/AlbergueAnimal/Views/Animals/Index.cshtml
+++ b/AlbergueAnimal/Views/Animals/Index.cshtml
@@ -117,7 +117,7 @@
     <!--<input type="submit" value="Procurar" />-->
     <button type="submit" class="btn btn-default">Procurar</button>
 
-        <!--@if (ViewBag.Page > 0)
+        @if (ViewBag.Page > 0)
         {
             <a href="@Url.Action("Index", new { page = ViewBag.Page - 1 })"
                class="btn btn-default">
@@ -130,7 +130,7 @@
                class="btn btn-default">
                 Seguinte &raquo;
             </a>
-        }-->
+        }
 
 </p>
 }
