--- a/AlbergueAnimal/Views/Adocao/Index.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Index.cshtml
@@ -34,32 +34,42 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreationDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastUpdated)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EndDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Animal.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Utilizador.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EstadoAdocao.estado)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.AdocaoId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.AdocaoId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.AdocaoId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CreationDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastUpdated)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EndDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Animal.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Utilizador.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EstadoAdocao.estado)
+                </td>
+                <td>
+                    @if (User.IsInRole("Administrator"))
+                    {
+                        <p>
+                            <a asp-action="Edit" asp-route-id="@item.AdocaoId">Edit</a> |
+                        </p>
+                    }
+
+                    <a asp-action="Details" asp-route-id="@item.AdocaoId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.AdocaoId">Delete</a>
+
+                </td>
+
+            </tr>
+        }
+
     </tbody>
 </table>
