Arquivo adoções criado, permissão para utilizador normal adotar

--- a/AlbergueAnimal/Views/Adocao/Delete.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Delete.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayNameFor(model => model.Animal)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Animal.Cor)
+            @Html.DisplayFor(model => model.Animal.Nome)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Utilizador)
