--- a/AlbergueAnimal/Views/Adocao/Details.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Details.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayNameFor(model => model.Animal)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Animal.Cor)
+            @Html.DisplayFor(model => model.Animal.Nome)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Utilizador)
