--- a/AlbergueAnimal/Views/Shared/_Layout.cshtml
+++ b/AlbergueAnimal/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                     <!--  <li><a asp-area="" asp-controller="Adocaos" asp-action="Index">Adocao</a></li>-->
                     @if (SignInManager.IsSignedIn(User))
                     {
-                        <li><a asp-area="" asp-controller="Adocao" asp-action="Index">Adocão</a></li>
+                        <li><a asp-area="" asp-controller="Adocao" asp-action="Index">Adotar</a></li>
                     }
                     @if (User.IsInRole("Administrator"))
                     {
