Traduções nas views da adoção

--- a/AlbergueAnimal/Views/Adocao/Create.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Create.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Identity
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Adotar um Animal";
 }
 
 @inject SignInManager<Utilizador> SignInManager
@@ -10,7 +10,7 @@
 
 <h2>Create</h2>
 
-<h4>Adocao</h4>
+<h4>A minha adoção</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -60,7 +60,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar á Lista</a>
 </div>
 
 @section Scripts {
