--- a/AlbergueAnimal/Views/Adocao/Index.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Index.cshtml
@@ -68,7 +68,7 @@ else
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.AdocaoId">Editar</a> |
                     <a asp-action="Details" asp-route-id="@item.AdocaoId">Detalhes</a> |
-                    <a asp-action="Delete" asp-route-id="@item.AdocaoId">Remover</a>
+                    <a asp-action="Delete" asp-route-id="@item.AdocaoId">Arquivar</a>
                 </td>
             }
         </tr>
