--- a/AlbergueAnimal/Views/Animals/Delete.cshtml
+++ b/AlbergueAnimal/Views/Animals/Delete.cshtml
@@ -2,12 +2,12 @@
 
 
 @{
-    ViewData["Title"] = "Remover";
+    ViewData["Title"] = "Arquivar";
 }
 
 <h2>Remover</h2>
 
-<h3>Tem a certeza que quer remover este animal?</h3>
+<h3>Tem a certeza que quer arquivar este animal?</h3>
 <div>
     <h4>Animal</h4>
     <hr />
