--- a/AlbergueAnimal/Views/Animals/Index.cshtml
+++ b/AlbergueAnimal/Views/Animals/Index.cshtml
@@ -88,7 +88,7 @@
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.AnimalId">Editar</a> |
                     <a asp-action="Details" asp-route-id="@item.AnimalId">Detalhes</a> |
-                    <a asp-action="Delete" asp-route-id="@item.AnimalId">Remover</a>
+                    <a asp-action="Delete" asp-route-id="@item.AnimalId">Arquivar</a>
                 </td>
             }
             else
