--- a/AlbergueAnimal/Views/Adocao/Delete.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model AlbergueAnimal.Models.Adocao
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Arquivar";
 }
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem a certeza que pretende arquivar esta adoção?</h3>
 <div>
     <h4>Adocao</h4>
     <hr />
@@ -52,6 +52,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="AdocaoId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Voltar á Lista</a>
     </form>
 </div>
