--- a/AlbergueAnimal/Views/Adocao/Index.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Index.cshtml
@@ -58,9 +58,10 @@
                 <td>
                     @if (User.IsInRole("Administrator"))
                     {
-                        <p>
-                            <a asp-action="Edit" asp-route-id="@item.AdocaoId">Edit</a> |
-                        </p>
+
+                        <a asp-action="Edit" asp-route-id="@item.AdocaoId">Edit</a> 
+
+
                     }
 
                     <a asp-action="Details" asp-route-id="@item.AdocaoId">Details</a> |
