Alterações na criação das adoções e traduções nas views

--- a/AlbergueAnimal/Views/Animals/Delete.cshtml
+++ b/AlbergueAnimal/Views/Animals/Delete.cshtml
@@ -58,7 +58,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="AnimalId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <input type="submit" value="Confirmar" class="btn btn-default" /> |
         <a asp-action="Index">Voltar á Lista</a>
     </form>
 </div>
