--- a/AlbergueAnimal/Views/Adocao/Create.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Create.cshtml
@@ -37,21 +37,21 @@
                     <select asp-for="EstadoAdocaoId" class="form-control" asp-items="ViewBag.EstadoAdocaoId"></select>
                 </div>
             }
-            <div class="form-group">
+            <!--<div class="form-group">
                 <label asp-for="CreationDate" class="control-label"></label>
                 <input asp-for="CreationDate" class="form-control" />
                 <span asp-validation-for="CreationDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div>-->
+            <!--<div class="form-group">
                 <label asp-for="LastUpdated" class="control-label"></label>
                 <input asp-for="LastUpdated" class="form-control" />
                 <span asp-validation-for="LastUpdated" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div>-->
+            <!--<div class="form-group">
                 <label asp-for="EndDate" class="control-label"></label>
                 <input asp-for="EndDate" class="form-control" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
-            </div>
+            </div>-->
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
