--- a/AlbergueAnimal/Views/Adocao/Delete.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Delete.cshtml
@@ -51,7 +51,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="AdocaoId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <input type="submit" value="Confirmar" class="btn btn-default" /> |
         <a asp-action="Index">Voltar á Lista</a>
     </form>
 </div>
